@@ -19,6 +19,7 @@
 14. Add dialog to add/edit favourites.
 15. Larger font size for landscape now-playing text.
 16. Round volume values.
+17. Add some work-arounds for older iOS browser.
 
 0.2.8
 -----
